--- a/images.html
+++ b/images.html
@@ -4,6 +4,9 @@
     </head>
     <body>
     <h1>Okapis</h1>
-    <img src="Okapi.jpeg" alt="Okapis" width="50" height="50">
+    <img src="Okapi.jpeg" alt="Okapis" width="250" height="250">
+    <audio src="Okapi's Sound.mp3" controls></audio>
+    <video src="Okapi gets startled by noise.mp4" controls width="200" height="200"></video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/zE5YPESU89Y?si=WuCPxvWMuEcq9Y1w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </body>
 </html>
